make sure address bar is visible

--- a/app/javascript/style/video/_layout.scss
+++ b/app/javascript/style/video/_layout.scss
@@ -102,6 +102,7 @@ body#videos__show {
       .primary-video-area,
       canvas {
         height: -webkit-fill-available;
+        width: unset;
       }
     }
 
